#头文件目录
INCLUDE_DIRECTORIES( ${LOG4CPP_INCLUDE} ${JSONCPP_INCLUDE} ${MINILOG_INCLUDE} ./include )

#目录源码路径
SET( JSONTEST_SRC_DIR ./source )

#代码列表
FILE (GLOB JSONTEST_FILES ${JSONTEST_SRC_DIR}/*.cpp)

#依赖的LIB
SET(JSONTEST_LIB ${LIB_LOG4CPP} ${LIB_JSONCPP} ${LIB_PTHREAD} ${LIB_MINILOG})

#生成sort 
ADD_EXECUTABLE( jsontest ${JSONTEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( jsontest ${JSONTEST_LIB} )
