#头文件目录
INCLUDE_DIRECTORIES( ${LOG4CPP_INCLUDE} ./include )

#代码目录
SET( PROCESS_SRC_DIR ./source )

#代码列表
FILE (GLOB PROCESS_FILES ${PROCESS_SRC_DIR}/*.c)

#依赖的LIB
SET(PROCESS_LIB ${LIB_LOG4CPP} ${LIB_PTHREAD} ${LIB_MINILOG})

#生成sort 
ADD_EXECUTABLE( process ${PROCESS_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( process ${PROCESS_LIB})
