#头文件目录
INCLUDE_DIRECTORIES( ${POCO_INCLUDE}  ./include )

#目录源码路径
SET( POCOTEST_SRC_DIR ./source )

#代码列表
FILE (GLOB POCOTEST_FILES ${POCOTEST_SRC_DIR}/*.cpp)

#依赖的LIB
SET(POCOTEST_LIB  ${LIB_POCO} )

#生成 
ADD_EXECUTABLE( pocoTEST ${POCOTEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( pocoTEST ${POCOTEST_LIB} )