#头文件目录
INCLUDE_DIRECTORIES( ${JSONCPP_INCLUDE} ${TINYXML_INCLUDE} ${MYSQL_INCLUDE} ${HIREDIS_INCLUDE} ${LOG4CPP_INCLUDE} ${COMMON_INCLUDE} ./include )

#目录源码路径
SET( REGISTER_SRC_DIR ./source )

#代码列表
FILE (GLOB REGISTER_FILES ${REGISTER_SRC_DIR}/*.cpp ${COMMON_SRC_DIR}/*.cpp )

#依赖的LIB
SET(REGISTER_LIB  ${LIB_JSONCPP} ${LIB_TINYXML}  ${LIB_MYSQL} ${LIB_HIREDIS} ${LIB_LOG4CPP} )

#生成 
ADD_EXECUTABLE( register ${REGISTER_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( register ${REGISTER_LIB}  -lpthread -lfcgi)