#头文件目录
INCLUDE_DIRECTORIES( ${JSONCPP_INCLUDE} ${TINYXML_INCLUDE} ${MYSQL_INCLUDE} ${HIREDIS_INCLUDE}  ./include )

#目录源码路径
SET( MYSQLTEST_SRC_DIR ./source )

#代码列表
FILE (GLOB MYSQLTEST_FILES ${MYSQLTEST_SRC_DIR}/*.cpp )

#依赖的LIB
SET(MYSQLTEST_LIB  ${LIB_JSONCPP} ${LIB_TINYXML}  ${LIB_MYSQL}  ${LIB_HIREDIS})

#生成 
ADD_EXECUTABLE( ToolClass_mysql ${MYSQLTEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( ToolClass_mysql ${MYSQLTEST_LIB} )