#头文件目录
INCLUDE_DIRECTORIES( ${JSONCPP_INCLUDE} ${TINYXML_INCLUDE} ${MYSQL_INCLUDE} ${HIREDIS_INCLUDE}  ./include )

#目录源码路径
SET( REDISTEST_SRC_DIR ./source )

#代码列表
FILE (GLOB REDISTEST_FILES ${REDISTEST_SRC_DIR}/*.cpp ${REDISTEST_SRC_DIR}/*.c)

#依赖的LIB
SET(REDISTEST_LIB  ${LIB_JSONCPP} ${LIB_TINYXML}  ${LIB_MYSQL} ${LIB_HIREDIS})

#生成 
ADD_EXECUTABLE( ToolClass_redis ${REDISTEST_FILES})

#连接生成相关库
TARGET_LINK_LIBRARIES( ToolClass_redis ${REDISTEST_LIB} )