#可执行文件输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${TOOLCLASS_EXECUTABLE_OUTPUT_PATH}/zeromq)

include_directories( ${ZEROMQ_INCLUDE}  )

if(ZeroMQ_FOUND)
  add_subdirectory(req_rep/hello_world)
  add_subdirectory(req_rep/mtserver)
  add_subdirectory(req_rep/pthread_use)
  add_subdirectory(req_rep/pthread_use_s)
  add_subdirectory(req_rep/req_rep_broker)
  add_subdirectory(pub_sub/base_use)
  add_subdirectory(pub_sub/better_use)
  add_subdirectory(pub_sub/syn_pubsub)
else()
  add_subdirectory(req_rep/hello_world EXCLUDE_FROM_ALL)
  add_subdirectory(req_rep/mtserver EXCLUDE_FROM_ALL)
  add_subdirectory(req_rep/pthread_use EXCLUDE_FROM_ALL)
  add_subdirectory(req_rep/pthread_use_s EXCLUDE_FROM_ALL)
  add_subdirectory(req_rep/req_rep_broker EXCLUDE_FROM_ALL)
  add_subdirectory(pub_sub/base_use EXCLUDE_FROM_ALL)
  add_subdirectory(pub_sub/better_use EXCLUDE_FROM_ALL)
  add_subdirectory(pub_sub/syn_pubsub EXCLUDE_FROM_ALL)
endif()